# framework

./: .gitignore  INSTALL.md  README.md
Framework/: CMakeLists.txt  main.cpp
Framework/src/: Func.cpp  Func.h  GenProg.cpp  GenProg.h  Generation.cpp  Generation.h  Graphics.h  Log.cpp  Log.h  Node.cpp  Node.h
Framework/src_lib/: genprog.h
Odmocnina/: CMakeLists.txt  SquareRoot.h  main.cpp  myGenProg.h
Odmocnina/include/: Func.h  Func.inl  GenProg.h  GenProg.inl  Graphics.h  Log.h  Log.inl  Node.h  Node.inl  genprog.h
Odmocnina/include_GenProg/: GenProgLib.h
